<resources>
    <string name="app_name">Paketnik-app</string>
    <string name="open_button_name">OPEN THE BOX</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello">Hello!</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="registracija">Registracija</string>
    <string name="face_scan">Face scan</string>
    <string name="prijava">Prijava</string>
    <string name="dobrodo_li_prijavite_se_ali_ustvarite_ra_un">Dobrodošli! Prijavite se ali ustvarite račun</string>
    <string name="face_scan_instructions">Prosim obračajte glavo</string>
    <string name="paketnik_app">Paketnik App</string>
</resources>